删除无用的timesnape